--- a/app/index.html
+++ b/app/index.html
@@ -18,9 +18,9 @@
     {{content-for "body"}}
 
     <script src="assets/vendor.js"></script>
-    <script src="assets/q-and-a.js"></script>  
+    <script src="assets/q-and-a.js"></script>
     <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
-    <script>
+    <!-- <script>
       // Initialize Firebase
       var config = {
         apiKey: "AIzaSyCCDGzVhwq4yV1bxMkOzUdj_21p5AmvadI",
@@ -29,7 +29,7 @@
         storageBucket: "questions-and-answers-6409d.appspot.com",
       };
       firebase.initializeApp(config);
-    </script>
+    </script> -->
 
 
     {{content-for "body-footer"}}
